force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/leaseworks__Deal_Terms_Revision__c.object-meta.xml
<CustomObject>
    <label>Commercial Terms Revision</label>
    <nameField>
        <label>Commercial Terms Revision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Terms Revisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>