force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Airframe_12_Y_per_month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airframe_12_Y_per_month__c</fullName>
    <inlineHelpText>Offer for reserve rate for 12Y as per marketing rep</inlineHelpText>
    <label>Airframe 12 Y per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>