force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Analysis_Target__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Analysis_Target__c</fullName>
    <inlineHelpText>Type of analysis to be done by the pricing or underwriting team</inlineHelpText>
    <label>Analysis Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>