force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Average_Annual_Earnings_Before_Tax__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Average_Annual_Earnings_Before_Tax__c</fullName>
    <label>Avg Annual EBT with MR/Sec Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>