force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Base_Month_PickList__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Month_PickList__c</fullName>
    <label>Base Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>