force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Credit_Charge__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Charge__c</fullName>
    <label>Credit Charge</label>
    <type>TextArea</type>
</CustomField>