force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Deposit_Rent_Multiple__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Rent_Multiple__c</fullName>
    <inlineHelpText>Marketing rep to enter this if  deposit type is selected as Rent Multiple</inlineHelpText>
    <label>Deposit (Rent Multiple)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>