force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__EBT__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__EBT__c</fullName>
    <inlineHelpText>EBT assumption for the analysis</inlineHelpText>
    <label>EBT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>