force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Engine_Type_picklist__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Type_picklist__c</fullName>
    <inlineHelpText>Engine Type as per marketing rep</inlineHelpText>
    <label>Engine Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>