force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Escalated_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Escalated_Rent__c</fullName>
    <inlineHelpText>Escalated rent at the time of delivery</inlineHelpText>
    <label>Escalated Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>