force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Fee_Used__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fee_Used__c</fullName>
    <label>Fee Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>