force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Final__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final?</label>
    <type>Checkbox</type>
</CustomField>