force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Issue_with_Lessee_Details__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Issue_with_Lessee_Details__c</fullName>
    <label>Issue with Lessee Details</label>
    <type>TextArea</type>
</CustomField>