force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Lease_NPV_without_MR_Sec_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_NPV_without_MR_Sec_Deposit__c</fullName>
    <label>Lease NPV without MR/Sec Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>