force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Marketing_Activity_Revision__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Activity_Revision__c</fullName>
    <description>Master child relationship with Marketing_Activity_Revision object</description>
    <label>Deal Revision</label>
    <referenceTo>leaseworks__Marketing_Activity_Revision__c</referenceTo>
    <relationshipLabel>Commercial Terms</relationshipLabel>
    <relationshipName>Deal_Terms_Revision</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>