force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__NVA__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__NVA__c</fullName>
    <label>NVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>