force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Parent_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Parent_Guarantee__c</fullName>
    <label>Parent Guarantee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>