force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Past_claimable_events_amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Past_claimable_events_amount__c</fullName>
    <label>Past Claimable Events Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>