force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Past_claimable_events_Details__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Past_claimable_events_Details__c</fullName>
    <label>Past Claimable Events Details</label>
    <type>TextArea</type>
</CustomField>