force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Purchase_Price__c</fullName>
    <label>Purchase Price Inc NVA (If Known)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>