force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__RAF_Factor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RAF_Factor__c</fullName>
    <label>RAF Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>