force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Type__c</fullName>
    <description>Adding new Rate Type field which is user entered</description>
    <inlineHelpText>Rate Type (Fixed/Fixed, Float/Fixed, Float/Float) to be entered by marketing rep</inlineHelpText>
    <label>Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>