force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Rental_Type_2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rental_Type_2__c</fullName>
    <label>Rental Type 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>