force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Rental_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rental_Type__c</fullName>
    <label>_Rental Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>