force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <inlineHelpText>Approval Status of the Economic Analysis Request</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>