force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Supplemental_Rents__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rents__c</fullName>
    <label>Supplemental Rents</label>
    <type>TextArea</type>
</CustomField>