force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Technical_Issues_Details__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Technical_Issues_Details__c</fullName>
    <label>Technical Issues Details</label>
    <type>TextArea</type>
</CustomField>