force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/fields/leaseworks__Y_Hidden_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Record_Type__c</fullName>
    <formula>leaseworks__Marketing_Activity_Revision__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Record Type</label>
    <type>Text</type>
</CustomField>