force-app/main/default/objects/leaseworks__Deal_Terms_Revision__c/recordTypes/leaseworks__Marketing_Activity.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Marketing_Activity</fullName>
    <active>false</active>
    <label>Deal</label>
</RecordType>